// Vitest Snapshot v1

exports[`performs monolikit visits > context after visit 1`] = `
{
  "activeVisit": undefined,
  "adapter": {
    "resolveComponent": [Function],
    "swapDialog": [Function],
    "swapView": [Function],
  },
  "hooks": {},
  "plugins": [],
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "state": {},
  "url": "https://localhost.test/visit",
  "version": "abc123",
  "view": {
    "name": "target.view",
    "properties": {
      "foo": "bar",
    },
  },
}
`;

exports[`performs monolikit visits > visit response 1`] = `
{
  "url": "https://localhost.test/visit",
  "version": "abc123",
  "view": {
    "name": "target.view",
    "properties": {
      "foo": "bar",
    },
  },
}
`;
